--- a/styles.css
+++ b/styles.css
@@ -1,49 +1,58 @@
 @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&family=Poppins:wght@300&display=swap");
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+
 body {
   background: url("./board.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100vh;
 }
+
 .top {
   display: flex;
   margin: 0 auto;
   justify-content: space-between;
   align-items: center;
-  width: 80%;
   height: 70px;
   border-radius: 20px;
   backdrop-filter: blur(3px);
 }
+
 .logo {
   position: relative;
   left: 2%;
 }
+
 .nav-bar {
   position: relative;
   right: 10%;
   display: flex;
   align-items: center;
 }
+
 ul {
   display: flex;
+  flex-wrap: nowrap;
 }
+
 li {
   list-style: none;
+  margin-right: 20px;
 }
+
 li a {
   text-decoration: none;
-  float: left;
-  margin-right: 100px;
   font-size: 1.5rem;
   cursor: pointer;
   color: white;
 }
+
 .nav-bar a {
   position: relative;
   text-decoration: none;
@@ -76,47 +85,55 @@ li a {
   cursor: pointer;
   transition: 1s;
 }
+
 .login-btn:hover {
   background: white;
   color: black;
 }
+
 .wrapper {
-  width: 600px;
+  width: 80%;
+  max-width: 600px;
   height: auto;
   position: absolute;
   background: url("paper.jpg");
-  left: 30%;
+  left: 50%;
   top: 19%;
+  transform: translateX(-50%);
   text-align: center;
 }
+
 .wrapper h2 {
-  position: relative;
-  top: 20%;
+  margin-top: 20%;
 }
 
 .sheet {
   margin: 20px auto;
-  /* border: 2px solid black; */
   text-align: center;
 }
+
 .sheet #input {
   height: 40px;
-  width: 400px;
+  width: 80%;
+  max-width: 400px;
   margin-top: 40px;
   border: none;
   background: none;
   border-bottom: 2px solid black;
   border-radius: 5px;
 }
+
 #input::placeholder {
   font-size: 1.1rem;
   color: black;
 }
+
 #input:focus {
   border: none;
   outline: none;
   border-bottom: 1px solid white;
 }
+
 #nail1 {
   position: absolute;
   width: 40px;
@@ -124,6 +141,7 @@ li a {
   left: 3%;
   top: 0;
 }
+
 #nail2 {
   position: absolute;
   width: 40px;
@@ -131,6 +149,7 @@ li a {
   right: 3%;
   top: 0;
 }
+
 #nail3 {
   position: absolute;
   width: 40px;
@@ -138,6 +157,7 @@ li a {
   left: 3%;
   bottom: 3%;
 }
+
 #nail4 {
   position: absolute;
   width: 40px;
@@ -145,6 +165,7 @@ li a {
   right: 3%;
   bottom: 3%;
 }
+
 label {
   margin-top: 30px;
 }
@@ -153,9 +174,51 @@ label {
   display: none;
   transition: 2s;
 }
+
 .heading {
   margin-top: 30px;
 }
+
 .swap {
   cursor: pointer;
+}
+
+/* Media Queries */
+
+@media only screen and (max-width: 600px) {
+  .top {
+    width: 100%; /* Adjusted width for smaller screens */
+  }
+  nav {
+    margin: auto;
+  }
+  .nav-bar {
+    right: 0%;
+  }
+  .logo {
+    display: none;
+  }
+
+  li a {
+    font-size: 1rem;
+  }
+
+  .login-btn {
+    font-size: 1rem;
+    padding: 4px 8px;
+  }
+
+  .wrapper {
+    width: 90%;
+    top: 15%;
+  }
+
+  .wrapper h2 {
+    margin-top: 15%;
+  }
+
+  .sheet #input {
+    width: 90%;
+    max-width: 320px;
+  }
 }
